--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "predeploy": "npm run build",
     "deploy": "gh-pages -d dist/public"
   },
-  "homepage": "https://yourusername.github.io/ForgetfulTools",
+  "homepage": "https://mehdi0mehdi.github.io/Steam-family",
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
     "@jridgewell/trace-mapping": "^0.3.25",
